[package]
name = "lets-just-talk"
description = "A no-nonsense audio chat over websockets"
version = "0.1.0"
edition = "2024"
authors = ["Eugene Palmoff <mahou@shoujo.pw>"]
license = "AGPL-3.0-only"

[dependencies]
ctrlc = { version = "3", features = ["termination"] }
futures-util = "0.3"
log = "0.4"
simple_logger = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29"
